pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pacman
  name: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - image: tim707/pacman-nodejs-app:latest
        name: pacman
        ports:
        - containerPort: 8080
          name: http-server
