pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  labels:
    app: pacman
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: pacman
